add OAuth redirection and password change functionality